benches/perf-invest/ferriskey-native-quick.log
   Compiling num-traits v0.2.19
   Compiling serde_core v1.0.228
   Compiling tokio v1.52.0
   Compiling tracing v0.1.44
   Compiling bitflags v2.11.1
   Compiling serde_json v1.0.149
   Compiling uuid v1.23.0
   Compiling winnow v1.0.1
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.17.0
   Compiling memchr v2.8.0
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling regex-syntax v0.8.10
   Compiling crc32fast v1.5.0
   Compiling rstest_macros v0.26.1
   Compiling simd-adler32 v0.3.9
   Compiling rustix v1.1.4
   Compiling adler2 v2.0.1
   Compiling opentelemetry v0.27.1
   Compiling miniz_oxide v0.8.9
   Compiling glob v0.3.3
   Compiling minimal-lexical v0.2.1
   Compiling cfg-if v1.0.4
   Compiling relative-path v1.9.3
   Compiling aho-corasick v1.1.4
   Compiling indexmap v2.14.0
   Compiling linux-raw-sys v0.12.1
   Compiling dtor-proc-macro v0.0.12
   Compiling sdd v3.0.10
   Compiling nom v7.1.3
   Compiling flate2 v1.1.9
   Compiling crossbeam-channel v0.5.15
   Compiling serial_test_derive v3.4.0
   Compiling num-integer v0.1.46
   Compiling chrono v0.4.44
   Compiling toml_parser v1.1.2+spec-1.1.0
   Compiling scc v2.4.0
   Compiling dtor v0.6.0
   Compiling aws-smithy-types v1.4.3
   Compiling num-bigint v0.4.6
   Compiling link-section v0.0.12
   Compiling toml_edit v0.25.11+spec-1.1.0
   Compiling ctor-proc-macro v0.0.12
   Compiling byteorder v1.5.0
   Compiling regex-automata v0.4.14
   Compiling base64 v0.21.7
   Compiling futures-timer v3.0.3
   Compiling tracing-subscriber v0.3.23
   Compiling serde v1.0.228
   Compiling aws-smithy-json v0.62.3
   Compiling aws-smithy-query v0.60.13
   Compiling proc-macro-crate v3.5.0
   Compiling hdrhistogram v7.5.4
   Compiling ctor v0.9.1
   Compiling serial_test v3.4.0
   Compiling tempfile v3.27.0
   Compiling serde_urlencoded v0.7.1
   Compiling which v8.0.2
   Compiling num_cpus v1.17.0
   Compiling regex v1.12.3
   Compiling tokio-util v0.7.18
   Compiling tower v0.5.3
   Compiling aws-smithy-async v1.2.11
   Compiling tokio-rustls v0.26.4
   Compiling tokio-stream v0.1.18
   Compiling tokio-retry2 v0.6.2
   Compiling aws-smithy-runtime-api v1.11.3
   Compiling opentelemetry_sdk v0.27.1
   Compiling tower-http v0.6.8
   Compiling axum v0.7.9
   Compiling h2 v0.4.13
   Compiling tower v0.4.13
   Compiling aws-credential-types v1.2.11
   Compiling aws-smithy-http v0.63.3
   Compiling aws-smithy-observability v0.2.4
   Compiling aws-types v1.3.11
   Compiling aws-sigv4 v1.3.8
   Compiling rstest v0.26.1
   Compiling hyper v1.9.0
   Compiling hyper-util v0.1.20
   Compiling hyper-rustls v0.27.9
   Compiling hyper-timeout v0.5.2
   Compiling reqwest v0.12.28
   Compiling tonic v0.12.3
   Compiling aws-smithy-http-client v1.1.9
   Compiling opentelemetry-http v0.27.0
   Compiling aws-smithy-runtime v1.10.0
   Compiling opentelemetry-proto v0.27.0
   Compiling aws-runtime v1.6.0
   Compiling opentelemetry-otlp v0.27.0
   Compiling aws-sdk-sso v1.93.0
   Compiling aws-sdk-sts v1.97.0
   Compiling aws-sdk-ssooidc v1.95.0
   Compiling telemetrylib v0.1.0 (/home/ubuntu/FlowFabric/ferriskey/telemetry)
   Compiling aws-config v1.8.13
   Compiling ferriskey v0.1.0 (/home/ubuntu/FlowFabric/ferriskey)
error[E0432]: unresolved import `ferriskey::ValkeyResult`
  --> ferriskey/benches/connections_benchmark.rs:21:64
   |
21 |     cmd, ConnectionAddr, ConnectionInfo, ValkeyConnectionInfo, ValkeyResult, Value,
   |                                                                ^^^^^^^^^^^^ no `ValkeyResult` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ferriskey` (bench "connections_benchmark") due to 1 previous error
